# droneops

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md
deploy/: README_DRONEOPS_DEPLOY.md  droneops-update.service  droneops-update.timer  droneops.env.example  droneops.service  install_droneops_rpi5.sh  run_dev.sh  update_droneops.sh
docs/: avaliacao_droneops_observa.md
docs/adr/: ADR-001-modulo-separado.md  ADR-002-camposync-nativo.md  ADR-003-reuso-morfocampo.md  ADR-004-limite-operacional.md  ADR-005-integracao-sister-observa.md  ADR-006-mvp-certificador-protocolo.md  ADR-007-sqlite-mvp-postgresql-opcional.md
docs/camposync/: contract.md
docs/ddd/: Boundaries.md  DomainModel.md
docs/governance/: README.md
docs/integrations/: sister_observa.md
docs/requisitos/: requisitos_iniciais.md
examples/: mission_package_minimal.json
include/droneops/: Csv.hpp  Mission.hpp  Package.hpp  Server.hpp  Sqlite.hpp  Validator.hpp
policies/: ai_usage_policy.md  evidence_policy.md  review_policy.md  safety_policy.md
prompts/: coding_prompt.md
src/: Csv.cpp  Mission.cpp  Package.cpp  Server.cpp  Sqlite.cpp  Validator.cpp  main.cpp
tests/: test_mission.cpp  test_package.cpp  test_sqlite.cpp  test_validator.cpp
web/: README_WEB.md  server.py
web/static/: app.js  index.html  manifest.json  style.css  sw.js
